 * Fixed bug in Database.pm caused by re-use of variable name in a loop.

2008-03-19 cjg
 * Cleanup of new view code, now titles in views look OK and everything is
    phrased and css'ed etc. Fixing #3266, #3267, #3268
 * Views regenerate if they are older than a set age. Fixing #3265
 * Fixed typo in generate_views.
 * Removed debug code.

2008-03-26 cjg
 * Moved auto-regeneration of abstract pages to its own new module.
 * Abstract pages now regenerate if they don't exist OR are older than
    the regen file.
 * Creating and importing eprints now does not generate abstracts at that 
    time.
 * Commiting an eprint just removes the current abstract page (if any) but 
    does not bother to generate a new one.

2008-03-26 cjg
 * Added edit-config to admin role.

2008-03-26 cjg 
 * Added new hooks: on_generate_thumbnails and thumbnail_types to allow a
    trigger when thumbnails are generated and to add (or remove) thumbnail
    types. Closing #3283 and #3284
 * Corrected text in epadmin to remind people that thumbnails can be other 
    stuff too.

2008-03-26 cjg 
 * Added a missing phrase for the mf dataset.
 * Shifted some phrase files to the system phrase dir from the repository
    phrase dir.

2008-03-26 cjg
 * Added feature to allow one plugin to mask another. Fixing #3196.

2008-03-26 cjg
 * Float now subclasses int and both are of search group "number"
 * Int will accept numbers with a decimal point, so that floats and ints
    can be mixed. 
 * Floats can now be searched. Closing #3314.

2008-03-27 cjg
 * Added new Extras render functions to truncate URLs at the end and in the
    middle. Closes #3245.
 * Added an Extras render funcion to render the related URL field. Closes
    #3246.

2008-03-27 tdb
 * Added importid and source_id fields to eprint for the import set and 
    source object identifier respectively
 * Added import dataset for storing imported collections (alpha)
 * Moved database schema into a separate Admin screen "Database Schema"
